--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,14 @@
+# Else
+dist/
 node_modules
-LICENSE
-package-lock.json
 .gitignore
-.npmignore
-README.md
+
+# Package
+package-lock.json
+
+# Source 
+docs/typedoc
+
+# MarkDown
 CHANGELOG.md
+README.md
