--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,19 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext"],
     "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+
+    "rootDir": "src",
+    "outDir": "dist",
     "esModuleInterop": true,
-    "noEmit": true,
-    "moduleResolution": "node",
-    "alwaysStrict": true,
-    "allowUnreachableCode": false,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noImplicitReturns": true,
-    "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+
+    "declaration": true,
+
+    "strict": true,
+    "skipLibCheck": true
   },
 
-  "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules/**/*"]
+  "include": ["src/**/*"]
 }
