--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "pretty": "prettier --write .",
     "lint": "eslint -c ./eslint.config.mjs .",
     "prepare": "npm run pretty && npm run lint && npm run build",
+    "release": "release-it",
+    "docs": "typedoc",
     "start": "tsup && clear && node tests/.node/index.js"
   },
   "repository": {
@@ -32,10 +34,16 @@
   "homepage": "https://github.com/kordjs/template#readme",
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@release-it/conventional-changelog": "^10.0.1",
+    "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.29.0",
     "globals": "^16.2.0",
     "prettier": "^3.5.3",
+    "release-it": "^19.0.3",
     "tsup": "^8.5.0",
+    "typedoc": "^0.28.7",
+    "typedoc-material-theme": "^1.4.0",
+    "typedoc-plugin-missing-exports": "^4.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0",
     "vitest": "^3.2.4"
