--- a/package.json
+++ b/package.json
@@ -1,51 +1,54 @@
 {
-  "name": "@kordjs/template",
-  "version": "1.0.1",
-  "description": "Template Description",
-  "main": "dist/index.js",
-  "exports": {
-    "types": "./dist/index.d.ts",
-    "import": "./dist/index.mjs",
-    "require": "./dist/index.js"
-  },
-  "scripts": {
-    "test": "vitest",
-    "build": "tsup",
-    "pretty": "prettier --write .",
-    "lint": "eslint -c ./eslint.config.mjs .",
-    "prepare": "npm run pretty && npm run lint && npm run build",
-    "release": "release-it",
-    "docs": "typedoc",
-    "start": "tsup && clear && node tests/.node/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kordjs/template.git"
-  },
-  "keywords": [
-    "template",
-    "kordjs"
-  ],
-  "author": "0sapphy",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kordjs/template/issues"
-  },
-  "homepage": "https://github.com/kordjs/template#readme",
-  "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@release-it/conventional-changelog": "^10.0.1",
-    "conventional-changelog-cli": "^5.0.0",
-    "eslint": "^9.29.0",
-    "globals": "^16.2.0",
-    "prettier": "^3.5.3",
-    "release-it": "^19.0.3",
-    "tsup": "^8.5.0",
-    "typedoc": "^0.28.7",
-    "typedoc-material-theme": "^1.4.0",
-    "typedoc-plugin-missing-exports": "^4.0.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.0",
-    "vitest": "^3.2.4"
-  }
+    "name": "@kordjs/template",
+    "version": "1.0.0",
+    "description": "Template Description",
+    "main": "dist/index.js",
+    "exports": {
+        "types": "./dist/index.d.ts",
+        "import": "./dist/index.mjs",
+        "require": "./dist/index.js"
+    },
+    "scripts": {
+        "test": "vitest",
+        "build": "tsup",
+        "pretty": "prettier --write .",
+        "lint": "eslint -c ./eslint.config.mjs .",
+        "prepare": "npm run pretty && npm run lint && npm run build",
+        "release": "release-it",
+        "start": "tsup && clear && node tests/.node/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/kordjs/template.git"
+    },
+    "keywords": [
+        "template",
+        "kordjs"
+    ],
+    "author": "0sapphy",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/kordjs/template/issues"
+    },
+    "homepage": "https://github.com/kordjs/template#readme",
+    "devDependencies": {
+        "@eslint/js": "^9.29.0",
+        "@release-it/conventional-changelog": "^10.0.1",
+        "@types/fs-extra": "^11.0.4",
+        "@types/prompts": "^2.4.9",
+        "conventional-changelog-cli": "^5.0.0",
+        "eslint": "^9.29.0",
+        "globals": "^16.2.0",
+        "prettier": "^3.5.3",
+        "release-it": "^19.0.3",
+        "tsup": "^8.5.0",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.35.0"
+    },
+    "dependencies": {
+        "commander": "^14.0.0",
+        "execa": "^9.6.0",
+        "fs-extra": "^11.3.0",
+        "prompts": "^2.4.2"
+    }
 }
