--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "@kordjs/template",
     "version": "1.0.0",
     "description": "Template Description",
+    "publishConfig": {
+        "access": "public"
+    },
     "main": "dist/index.js",
     "exports": {
         "types": "./dist/index.d.ts",
