--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
     "name": "@kordjs/template",
     "version": "1.1.0",
     "description": "Template Description",
-    "publishConfig": {
-        "access": "public"
-    },
     "main": "dist/index.js",
     "exports": {
         "types": "./dist/index.d.ts",
         "import": "./dist/index.mjs",
         "require": "./dist/index.js"
     },
+    "publishConfig": {
+        "access": "public"
+    },
+    "files": [
+        "bin/",
+        "templates/",
+        "dist/",
+        "LICENSE",
+        "README.md"
+    ],
     "scripts": {
         "test": "vitest",
         "build": "tsup",
