--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.1.1",
     "description": "Template Description",
     "main": "dist/index.js",
+    "bin": {
+        "ktp": "bin/index.js"
+    },
     "exports": {
         "types": "./dist/index.d.ts",
         "import": "./dist/index.mjs",
