--- a/package.json
+++ b/package.json
@@ -1,34 +1,26 @@
 {
-    "name": "@kordjs/template",
+    "name": "create-kordjs",
     "version": "1.1.2",
-    "description": "Template Description",
+    "description": "For kordjs (dev)",
     "main": "dist/index.js",
-    "bin": {
-        "ktp": "bin/index.js"
-    },
-    "exports": {
-        "types": "./dist/index.d.ts",
-        "import": "./dist/index.mjs",
-        "require": "./dist/index.js"
-    },
+    "bin": "bin/index.js",
     "publishConfig": {
         "access": "public"
     },
+    "directories": {
+        "bin": "bin",
+        "lib": "src"
+    },
     "files": [
-        "bin/",
         "templates/",
-        "dist/",
-        "LICENSE",
-        "README.md"
+        "dist/"
     ],
     "scripts": {
-        "test": "vitest",
-        "build": "tsup",
+        "build": "tsc --noEmit && tsup",
         "pretty": "prettier --write .",
         "lint": "eslint -c ./eslint.config.mjs .",
-        "prepare": "npm run pretty && npm run lint && npm run build",
         "release": "release-it",
-        "start": "tsup && clear && node tests/.node/index.js"
+        "prepack": "npm run lint && npm run build"
     },
     "repository": {
         "type": "git",
